<resources>
    <string name="app_name">gibb-homework</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_create_edit">CreateEditActivity</string>
    <string name="title_activity_settings">Settings</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_detail">DetailActivity</string>

    <!-- Custom added strings -->
    <string name="title_main">Meine Hausaufgaben</string>
    <string name="title_create">Hausaufgabe erstellen</string>
    <string name="title_edit">Hausaufgabe editieren</string>

    <string name="task_title">Titel</string>
    <string name="task_description">Beschreibung</string>
    <string name="task_module">Modul auswählen</string>
    <string name="task_duedate">Due-Date (dd.mm.yy)</string>
    <string name="button_upload">Bild hochladen</string>
    <string name="button_submit">Aufgabe speichern</string>
    <string name="button_delete">Task löschen</string>
</resources>